add user state
